--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,6 @@
 {
   "presets": ["es2015", "stage-0", "react"],
-  "plugins": ["add-module-exports"],
+  "plugins": ["add-module-exports", "transform-flow-strip-types"],
   "env": {
     "production": {
       "presets": ["react-optimize"],
