--- a/package.json
+++ b/package.json
@@ -83,12 +83,14 @@
   "homepage": "https://github.com/chentsulin/electron-react-boilerplate#readme",
   "devDependencies": {
     "asar": "^0.12.3",
+    "babel-cli": "^6.18.0",
     "babel-core": "^6.18.0",
     "babel-eslint": "^7.1.0",
     "babel-loader": "^6.2.7",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-dev-expression": "^0.2.1",
     "babel-plugin-tcomb": "^0.3.21",
+    "babel-plugin-transform-flow-strip-types": "^6.18.0",
     "babel-plugin-webpack-loaders": "^0.8.0",
     "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "^6.18.0",
@@ -122,6 +124,7 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "fbjs-scripts": "^0.7.1",
     "file-loader": "^0.9.0",
+    "flow-bin": "^0.34.0",
     "html-webpack-plugin": "^2.24.0",
     "jsdom": "^9.8.3",
     "json-loader": "^0.5.4",
@@ -141,6 +144,8 @@
     "webpack-validator": "^2.2.9"
   },
   "dependencies": {
+    "axios": "^0.15.2",
+    "cheerio": "^0.22.0",
     "electron-debug": "^1.0.1",
     "font-awesome": "^4.7.0",
     "react": "^15.3.2",
@@ -150,7 +155,10 @@
     "react-router-redux": "^4.0.6",
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0",
-    "source-map-support": "^0.4.6"
+    "request": "^2.78.0",
+    "request-promise": "^4.1.1",
+    "source-map-support": "^0.4.6",
+    "tough-cookie-serialize": "^1.0.0"
   },
   "devEngines": {
     "node": ">=6.x",
