--- a/package.json
+++ b/package.json
@@ -141,7 +141,8 @@
     "webpack-dev-middleware": "^1.8.4",
     "webpack-hot-middleware": "^2.13.1",
     "webpack-merge": "^0.15.0",
-    "webpack-validator": "^2.2.9"
+    "webpack-validator": "^2.2.9",
+    "yakbak": "^2.5.0"
   },
   "dependencies": {
     "axios": "^0.15.2",
@@ -158,6 +159,7 @@
     "request": "^2.78.0",
     "request-promise": "^4.1.1",
     "source-map-support": "^0.4.6",
+    "superagent": "^2.3.0",
     "tough-cookie-serialize": "^1.0.0"
   },
   "devEngines": {
